# cumplo-spotter

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  Dockerfile.development  Makefile  README.md  app.py  cloudbuild.json  docker-compose.yml  entrypoint.sh  main 2.py  main.py  mypy.ini  oldmain.py  poetry.toml  pyproject.toml  requirements.txt  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: production.yml
cumplo_spotter/: __init__.py  main.py
cumplo_spotter/business/: funding_requests.py
cumplo_spotter/integrations/: cumplo.py
cumplo_spotter/integrations/cumplo/: __init__.py  api_global.py  api_graphql.py  api_html.py  controller.py  exceptions.py
cumplo_spotter/models/: borrower.py  filter.py  funding_request.py  request_duration.py
cumplo_spotter/models/cumplo/: __init__.py  borrower.py  debtor.py  funding_request.py  portfolio.py  request_duration.py  simulation.py
cumplo_spotter/routers/: cache.py  funding_requests.py  users.py
cumplo_spotter/routers/funding_requests/: __init__.py  private.py  public.py
cumplo_spotter/utils/: constants.py
exceptions/: http.py
integrations/: cloud_tasks.py  cumplo.py  firestore.py
middlewares/: authentication.py  authorization.py
models/: borrower.py  configuration.py  credit_history.py  filter.py  funding_request.py  notification.py  outstanding_payer.py  payer.py  request_duration.py  requestable.py  user.py
routers/: configurations.py  funding_requests.py
routers/funding_requests/: __init__.py  private.py
schemas/: configurations.py  funding_requests.py
shortcuts/: cumplo_onetime_template.shortcut  cumplo_schedule_template.shortcut
utils/: constants.py  currency.py  event.py  text.py
